update Game Board Cell components

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,38 @@
     transform: rotate(360deg);
   }
 }
+
+/* Game styles */
+.game {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.game-info {
+  min-height: 50px;
+}
+
+.cell {
+  background: #fff;
+  border: 1px solid #414c69;
+  float: left;
+  line-height: 34px;
+  height: 34px;
+  text-align: center;
+  width: 34px;
+  cursor: pointer;
+}
+
+.cell:focus {
+  outline: none;
+}
+
+.hidden {
+  background: #7e7b92;
+}
+
+.is-flag,
+.is-mine {
+  color: #fc543c;
+}
